testcases/error-cases/syntax-error-05/error.txt
error[E0013]: invalid token sequence
 --> testcases\error-cases\syntax-error-05\input.canon:3:5
  |
1 | config {
2 |     name = "test"
3 |     = // missing left side of assignment
  |     ^
4 | 
  |
  = note: mismatched input '=' expecting {'init', 'private', 'get', 'repeated', 'if', 'not', 'this', 'val', 'var', MINUS, RBRACE, LPAREN, ';', STRING_LITERAL, DOUBLE_STRING_LITERAL, TEMPLATE_STRING_START, INTEGER_LITERAL, 'true', 'false', ANNOTATION, IDENTIFIER}
  = note: this combination of tokens is not valid
  = help: check the syntax and structure of your code
